# kaso-mashin

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
src/ci/: __init__.py
src/frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/frontend/public/: site.webmanifest
src/frontend/src/: App.vue  base_types.ts  constants.ts  main.ts
src/frontend/src/components/: BootstrapCard.vue  CreateCard.vue  ErrorCards.vue  ExplanationNote.vue  IdentityCard.vue  IdentityDialog.vue  ImageCard.vue  ImageDialog.vue  ImagePending.vue  InstanceCard.vue  InstancePending.vue  NetworkCard.vue  RemoveConfirmation.vue  TaskCards.vue  TasksNotifier.vue
src/frontend/src/layouts/default/: AppBar.vue  AppNav.vue  Default.vue
src/frontend/src/pages/: BootstrapDetail.vue  Bootstraps.vue  Identities.vue  IdentityDetail.vue  ImageDetail.vue  Images.vue  InstanceDetail.vue  Instances.vue  Landing.vue  NetworkDetail.vue  Networks.vue
src/frontend/src/router/: index.ts
src/frontend/src/store/: bootstraps.ts  config.ts  disks.ts  errors.ts  identities.ts  images.ts  instances.ts  networks.ts  tasks.ts
src/frontend/src/views/: Home.vue  Identities.vue  Images-Grid.vue  Images.vue  Instances.vue  Networks.vue
src/frontend/tests/: fixtures.ts  seeds.ts
src/frontend/tests/store/: bootstraps.test.ts  disks.test.ts  identities.test.ts  images.test.ts  instances.test.ts  networks.test.ts  tasks.test.ts
src/kaso_mashin/: __init__.py  config.py  cui.py  custom_types.py  db.py  executor.py  runtime.py
src/kaso_mashin/ansible/ansible_collections/mrmat/playground/: README.md  galaxy.yml
src/kaso_mashin/ansible/ansible_collections/mrmat/playground/roles/redirect_console/: README.md
src/kaso_mashin/ansible/ansible_collections/mrmat/playground/roles/redirect_console/tasks/: main.yml
src/kaso_mashin/apis/: __init__.py  abstract_api.py  config_api.py  identity_api.py  image_api.py  instance_api.py  network_api.py  task_api.py
src/kaso_mashin/cli/: run.py
src/kaso_mashin/cli/commands/: __init__.py  abstract_commands.py  base_commands.py  bootstrap_commands.py  identity_commands.py  image_commands.py  instance_commands.py  network_commands.py
src/kaso_mashin/commands/: __init__.py  abstract_commands.py  bootstrap_commands.py  cloud_commands.py  identity_commands.py  image_commands.py  instance_commands.py  network_commands.py  server_commands.py
src/kaso_mashin/common/: __init__.py  base_types.py  config.py  custom_types.py  ddd_scaffold.py
src/kaso_mashin/common/applied/: __init__.py  base_types.py  disks.py  images.py
src/kaso_mashin/common/ddd/: __init__.py  aggregates.py  base_types.py  models.py  repositories.py
src/kaso_mashin/common/entities/: __init__.py  bootstraps.py  disks.py  identities.py  images.py  instances.py  networks.py  tasks.py
src/kaso_mashin/common/generics/: async_repository.py  base_types.py  disks.py  images.py  repository.py
src/kaso_mashin/common/model/: __init__.py  bootstrap_model.py  config_model.py  identity_model.py  image_model.py  images.py  instance_model.py  network_model.py  qemu_model.py  relation_tables.py
src/kaso_mashin/common/services/: __init__.py  event.py  messaging.py  qemu.py  qemu_service.py
src/kaso_mashin/common/templates/: ignition_k8s_master.yaml  ignition_k8s_slave.yaml
src/kaso_mashin/controllers/: __init__.py  abstract_controller.py  bootstrap_controller.py  disk_controller.py  identity_controller.py  image_controller.py  instance_controller.py  network_controller.py  os_disk_controller.py  phone_home_controller.py  task_controller.py
src/kaso_mashin/model/: __init__.py  ansible.py  bootstrap_model.py  cloud.py  cloud_init.py  config_model.py  custom_db_types.py  custom_types.py  exception_model.py  identity_model.py  image_model.py  instance.py  instance_model.py  instance_process.py  network_model.py  script_component.py  task_model.py  vm_script_model.py  vmscript_model.py
src/kaso_mashin/server/: db.py  executor.py  renderable.py  run.py  runtime.py
src/kaso_mashin/server/apis/: __init__.py  abstract_api.py  base_api.py  bootstrap_api.py  config_api.py  disk_api.py  identity_api.py  image_api.py  instance_api.py  network_api.py  task_api.py
src/kaso_mashin/server/controllers/: __init__.py  abstract_controller.py  bootstrap_controller.py  identity_controller.py  image_controller.py  instance_controller.py  network_controller.py  os_disk_controller.py  phone_home_controller.py  task_controller.py
src/mrmat_playground/: __init__.py  abstract_resource_commands.py  cloud_init_commands.py  cui.py  executor.py  instance.py  instance_commands.py
src/mrmat_playground/ansible/ansible_collections/mrmat/playground/: galaxy.yml
src/mrmat_playground/ansible/ansible_collections/mrmat/playground/roles/redirect_console/defaults/: main.yml
src/mrmat_playground/ansible/ansible_collections/mrmat/playground/roles/redirect_console/handlers/: main.yml
src/mrmat_playground/cloud_init/: __init__.py  metadata.py  network_config.py  userdata.py  vendordata.py
src/mrmat_playground/commands/: cloud_commands.py  image_commands.py  instance_commands.py
src/mrmat_playground/model/: __init__.py  ansible.py  cloud.py  cloud_init.py  instance.py  renderable.py  vm_script.py
tests/: conftest.py  test_api_config.py  test_api_identity.py  test_api_image.py  test_applied.py  test_binarysizedvalue.py  test_ddd.py  test_disks.py  test_entities.py  test_generics.py  test_identities.py  test_instances.py  test_network_controller.py  test_networks.py
var/: architecture.md  start-vnc.sh
var/ansible/: inventory.yml
var/ansible/templates/cloud-init/infra/: meta-data.j2  network-config.j2  user-data.j2
var/ansible/templates/cloud-init/infra/scripts/per-once/: 00-redirect-journald.sh.j2
var/media/: Logo.logoist  favicons.iconsproj
(+4 files in other folders)
