[build-system]
requires = [
    'setuptools>=42.0.0',
    'wheel >= 0.36.0'
]
build-backend = 'setuptools.build_meta'

[project]
name = "kaso-mashin"
description = "Building a mini-cloud as a playground"
urls = { "Sources" = "https://github.com/MrMatAP/kaso-mashin" }
keywords = ["experimental"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dependencies = [
    "rich~=13.5.2",         # MIT
    "requests~=2.31.0",     # Apache 2.0
    "pyyaml~=6.0",          # MIT
    "netifaces~=0.11.0",    # MIT
    "sqlalchemy~=2.0.15",   # MIT
    "fastapi~=0.101.0",     # MIT
    "uvicorn~=0.23.2",      # BSD 3-Clause
    "httpx~=0.24.1",        # BSD 3-Clause
    "aiofiles~=23.2.1",     # Apache 2.0
    "qemu.qmp~=0.0.3"       # ?
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "ci.version "}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kaso_mashin*"]
namespaces = true

[tool.setuptools.package-data]
"*" = [".mo", "*.yml", "*.md", "inventory", "*.j2"]

[project.scripts]
kaso = "kaso_mashin.cli.run:main"
kaso-server = "kaso_mashin.server.run:main"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=kaso_mashin --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
