[build-system]
requires = [
    'setuptools==69.0.2',
    'wheel==0.42.0'
]
build-backend = 'setuptools.build_meta'

[project]
name = "kaso-mashin"
description = "Building a mini-cloud as a playground"
urls = { "Sources" = "https://github.com/MrMatAP/kaso-mashin" }
keywords = ["mac", "virtualization", "virtualisation", "arm64"]
readme = "README.md"
license = { text = "MIT" }
authors = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
maintainers = [
    { "name" = "Mathieu Imfeld", "email" = "imfeldma+9jqerw@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.12"
dependencies = [
    "rich==13.7.0",             # MIT
    "requests==2.31.0",         # Apache 2.0
    "pyyaml==6.0.1",            # MIT
    "netifaces==0.11.0",        # MIT
    "sqlalchemy==2.0.23",       # MIT
    "websockets==12.0",         # BSD 3-Clause
    "fastapi==0.105.0",         # MIT
    "uvicorn==0.24.0.post1",    # BSD 3-Clause
    "httpx==0.25.2",            # BSD 3-Clause
    "aiofiles==23.2.1",         # Apache 2.0
    "qemu.qmp==0.0.3",          # LGPLv2+
    "passlib==1.7.4",           # BSD
    "aioconsole==0.7.0"         # GPLv3
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "ci.version "}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kaso_mashin*"]
namespaces = true

[tool.setuptools.package-data]
"*" = [".mo", "*.yml", "*.md", "inventory", "*.j2", "*.html", "*.ico", "*.css", "*.js", "*.svg", "*.woff", "*.eot", "*.ttf"]

[project.scripts]
kaso = "kaso_mashin.cli.run:main"
kaso-server = "kaso_mashin.server.run:main"

# If you are debugging your tests using PyCharm then comment out the coverage options
# in addopts
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=kaso_mashin --cov-report=term --cov-report=xml:build/coverage.xml --junit-xml=build/junit.xml"
testpaths = ["tests"]
junit_family = "xunit2"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
